// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationModal matches snapshot when closed 1`] = `
<.sc-iGgWBj
  aria={
    {
      "describedby": "secondaryText",
      "labelledby": "question",
    }
  }
  isOpen={false}
  overlayClassName="modalOverlay"
  shouldCloseOnOverlayClick={true}
>
  <.sc-gEvEer
    onClick={[Function]}
  >
    <Icon>
      <Glyph
        glyphColor="currentColor"
        name="Close"
        ratio={1}
      />
    </Icon>
  </.sc-gEvEer>
  <.sc-eqUAAy>
    <Icon
      backgroundColor="hsla(0, 100%, 42.5%, 0.8)"
      backgroundStyle="BackgroundTriangleSmall"
      glyphColor="white"
      iconRatio={6}
    >
      <Glyph
        glyphColor="currentColor"
        name="Exclamation"
        ratio={1}
      />
    </Icon>
    <.sc-fqkvVR
      id="question"
    >
      Will this test pass?
    </.sc-fqkvVR>
    <.sc-dcJsrY
      id="secondaryText"
    >
      Only time will tell
    </.sc-dcJsrY>
  </.sc-eqUAAy>
  <.sc-aXZVg>
    <Button
      clickAction={[Function]}
      label="Cancel"
    />
    <Button
      clickAction={[Function]}
      label="Confirm"
      type="danger"
    />
  </.sc-aXZVg>
</.sc-iGgWBj>
`;

exports[`ConfirmationModal matches snapshot when open 1`] = `
<.sc-iGgWBj
  aria={
    {
      "describedby": "secondaryText",
      "labelledby": "question",
    }
  }
  isOpen={true}
  overlayClassName="modalOverlay"
  shouldCloseOnOverlayClick={true}
>
  <.sc-gEvEer
    onClick={[Function]}
  >
    <Icon>
      <Glyph
        glyphColor="currentColor"
        name="Close"
        ratio={1}
      />
    </Icon>
  </.sc-gEvEer>
  <.sc-eqUAAy>
    <Icon
      backgroundColor="hsla(0, 100%, 42.5%, 0.8)"
      backgroundStyle="BackgroundTriangleSmall"
      glyphColor="white"
      iconRatio={6}
    >
      <Glyph
        glyphColor="currentColor"
        name="Exclamation"
        ratio={1}
      />
    </Icon>
    <.sc-fqkvVR
      id="question"
    >
      Will this test pass?
    </.sc-fqkvVR>
    <.sc-dcJsrY
      id="secondaryText"
    >
      Only time will tell
    </.sc-dcJsrY>
  </.sc-eqUAAy>
  <.sc-aXZVg>
    <Button
      clickAction={[Function]}
      label="Cancel"
    />
    <Button
      clickAction={[Function]}
      label="Confirm"
      type="danger"
    />
  </.sc-aXZVg>
</.sc-iGgWBj>
`;
